# PatchBasedInpainting

./: .gitignore  .gitmodules  BoundaryNormals.cpp  BoundaryNormalsDemo.cpp  CMakeLists.txt  CandidatePairs.cpp  CandidatePairs.h  CandidatePairs.hxx  CandidatePatches.h  ClassicalImageInpainting.cpp  ClassicalImageInpaintingBasicViewer.cpp  ClassicalImageInpaintingDebug.cpp  ClassicalImageInpaintingWithTextOutput.cpp  ClassicalImageInpaintingWithVisualOutput.cmake  ClassicalImageInpaintingWithVisualOutput.cpp  ClusterColors.cpp  ClusterColors.h  ClusterColorsAdaptive.cpp  ClusterColorsAdaptive.h  ClusterColorsUniform.cpp  ClusterColorsUniform.h  CompositeDifferencePatchPairVisitor.h  CompositeInpaintingVisitor.hpp  ComputationThread.cpp  CriminisiInpainting.cpp  CriminisiInpainting.h  CriminisiInpainting.hxx  CriminisiInpainting.txx  CriminisiInpainting.ui  CriminisiInpaintingDebugging.cpp  CriminisiInpaintingDebugging.txx  CriminisiInpaintingExample.cpp  CriminisiInpaintingExampleRGBD.cxx  CriminisiInpaintingExampleRGBDI.cxx  CriminisiInpaintingInterface.cpp  CriminisiInpaintingNonInteractive.cpp  CustomStyle.cpp  CustomStyle.h  DVPTreeRectangleTopology.cpp  DebugOutputs.cpp  (+421 more)
Concepts/: CMakeLists.txt  DescriptorConcept.hpp  DescriptorVisitorConcept.hpp  InpaintingVisitorConcept.hpp  NodeConcept.hpp  PriorityConcept.hpp
Demos/: CMakeLists.txt  DemoBadPatchComparison.cpp  DemoBadPatchRealImage.cpp  DemoBoundaryNormals.cpp  DemoBoundaryNormals2.cpp  DemoClusterColors.cpp  DemoClusterColorsClusterCenters.cpp  DemoClusterColorsLabelImage.cpp  DemoColorImageByScore.cpp  DemoCreateImage.cpp  DemoCreateMask.cpp  DemoDerivatives.cpp  DemoErroneousGradient.cpp  DemoFillOrder.cpp  DemoFindPixelAcrossHole.cpp  DemoFollowIsophotesAcrossBoundary.cpp  DemoGradient.cpp  DemoInnerOuterBoundary.cpp  DemoIsophotes.cpp  DemoMaskedLaplacian.cpp  DemoMaskedLaplacianSynthetic.cpp  DemoPatchDifference.cpp  DemoPatchImageDifference.cpp  DemoPatchSearchFunction.cpp  DemoPatchSearchValidMask.cpp  DemoPixelDifference.cpp  DemoSelfPatchCompare.cpp  DemoSortGMHDifference.cpp
DifferenceFunctions/: CMakeLists.txt  FeatureVectorAngleDifference.hpp  FeatureVectorDifference.hpp  FullImagePatchDifference.hpp  GMHDifference.hpp  ImagePatchDifference.hpp  ImagePatchVectorizedDifference.hpp  PatchValidHistogramDifference.hpp  SumAbsolutePixelDifference.hpp  SumAbsolutePixelDifferenceN.hpp  SumSquaredPixelDifference.hpp  WeightedFeatureVectorDifference.hpp  WeightedHSVSSD.hpp  WeightedHSVSSDFull.hpp  WeightedImagePatchDifference.hpp  WeightedSumAbsolutePixelDifference.hpp  WeightedSumSquaredPixelDifference.hpp
Examples/: CMakeLists.txt  ExamplePatchBasedInpaintingRGBD.cpp  ExamplePatchDifference.cpp  ExampleSelfPatchCompare.cpp
ImageProcessing/: BoundaryEnergy.h  BoundaryEnergy.hpp  BoundaryNormals.cpp  BoundaryNormals.h  BoundaryNormals.hpp  CMakeLists.txt  Derivatives.cpp  Derivatives.h  Derivatives.hpp  Derivatives.hxx  Histograms.cpp  Histograms.h  Isophotes.cpp  Isophotes.h  Isophotes.hpp  Mask.cpp  Mask.h  Mask.hxx  MaskOperations.cpp  MaskOperations.h  MaskOperations.hxx  PixelFilterFunctors.hpp
Interactive/: AdvancedViewerWidget.ui  BasicViewerWidget.h  BasicViewerWidget.hpp  BasicViewerWidget.ui  CMakeLists.txt  Canvas.cpp  Canvas.h  ColorPalette.cpp  ColorPalette.h  ComputationThread.cpp  ComputationThread.h  DialogHandler.h  DisplayPriority.h  DisplayState.cpp  DisplayState.h  DisplayStyle.h  FileSelectionWidget.cpp  FileSelectionWidget.h  FileSelector.cpp  FileSelector.h  ForwardLookTableModel.cpp  ForwardLookTableModel.h  FullInspectionWidget.cpp  FullInspectionWidget.h  FullInspectionWidget.ui  HelpersDisplay.cpp  HelpersDisplay.h  HelpersQt.cpp  HelpersQt.h  HelpersQt.hxx  ImageCamera.cpp  ImageCamera.h  ImageInput.cpp  ImageInput.h  InpaintingComputationObject.cpp  InpaintingComputationObject.h  InpaintingDisplaySettings.cpp  InpaintingDisplaySettings.h  InpaintingIterationRecord.cpp  InpaintingIterationRecord.h  (+63 more)
LearnParameters/: CMakeLists.txt  LearnGoodMatchParameters.cpp
NearestNeighbor/: CMakeLists.txt  DefaultSearchBest.hpp  DummyWriter.hpp  FirstValidDescriptor.hpp  KNNBestWrapper.hpp  KNNSearchAndSort.hpp  LinearSearch.hpp  LinearSearchAlgorithm.hpp  LinearSearchBest.hpp  LinearSearchBestAdaptiveDualHistogramDifference.hpp  LinearSearchBestDualHistogramDifference.hpp  LinearSearchBestHistogram.hpp  LinearSearchBestHistogramCorrelation.hpp  LinearSearchBestHistogramDifference.hpp  LinearSearchBestHistogramParent.hpp  LinearSearchBestHoleHistogramDifference.hpp  LinearSearchBestProperty.hpp  LinearSearchCriteriaProperty.hpp  LinearSearchKNN.hpp  LinearSearchKNNProperty.hpp  LinearSearchKNNPropertyCombine.hpp  LinearSearchKNNPropertyLimitLocalReuse.hpp  LinearSearchKNNPropertyLimitReuse.hpp  LinearSearchKNNPropertyNoReuse.hpp  LocalOptimizationSearchBestProperty.hpp  PassThrough.hpp  PrecomputedNeighbors.hpp  SearchFunctor.hpp  SortByRGBTextureGradient.hpp  StorageAndSearchFunctor.hpp  ThreeStepNearestNeighbor.hpp  TopPatchListOrManual.hpp  TwoStepNearestNeighbor.hpp  VerifyOrManual.hpp  VisualSelectionBest.hpp  VisualSelectionBest_GUIThread.hpp  metric_space_search.hpp  topological_search.hpp  weak_metric_space_concept.hpp
Priority/: CMakeLists.txt  Priority.cpp  Priority.h  Priority.hxx  PriorityConfidence.cpp  PriorityConfidence.h  PriorityConfidence.hpp  PriorityCriminisi.h  PriorityCriminisi.hpp  PriorityCriminisi.hxx  PriorityCurvature.cpp  PriorityCurvature.h  PriorityCurvature.hpp  PriorityDepth.h  PriorityDepth.hpp  PriorityDepth.hxx  PriorityFactory.cpp  PriorityFactory.h  PriorityFactory.hxx  PriorityImprovedCriminisi.h  PriorityManual.cpp  PriorityManual.h  PriorityManual.hpp  PriorityManual.hxx  PriorityOnionPeel.cpp  PriorityOnionPeel.h  PriorityOnionPeel.hxx  PriorityRandom.h  PriorityRandom.hpp  PrioritySearchHighest.h
Tests/: CMakeLists.txt  DummyPatchesDriver.hpp  DummyPatchesInpainting.cpp  TestBoundaryNormals.cpp  TestCandidatePairs.cpp  TestClusterColors.cpp  TestClusterColorsClusterCenters.cpp  TestClusterColorsLabelImage.cpp  TestColorImageByScore.cpp  (+52 more)
(+2838 files in other folders)
